Get communication with online APIs

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,5 +14,19 @@
 			<input type="submit" value="Find Hiking Routes!">
 			</form>
 		</p>
+		<p>
+			<form action='/api/currentweather'>
+			Latitude: <input type="text" name="latitude">
+			Longitude: <input type="text" name="longitude">
+			<input type="submit" value="Get current weather!">
+			</form>
+		</p>
+		<p>
+			<form action='/api/forecastweather'>
+			Latitude: <input type="text" name="latitude">
+			Longitude: <input type="text" name="longitude">
+			<input type="submit" value="Get forecast weather!">
+			</form>
+		</p>
 	</body>
 </html>
