--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,64 @@
 <!DOCTYPE html>
 <html>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<head>
 		<title>Hiking Trip Planner</title>
 	</head>
+
+	<body>
+
+		<!-- Navbar -->
+		<div class="w3-top">
+		  <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
+			<a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+			<a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Login</a>
+			<a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Search</a>
+			<a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Plan</a>
+		  </div>
+		</div>
+
+		<!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
+		<div class="w3-main">
+
+		  <div class="w3-row w3-padding-64">
+			<div class="w3-twothird w3-container">
+			  <h1 class="w3-text-teal">Plan your hiking trip!</h1>
+			  <p>Using this application, you'll be able to search for hiking routes anywhere in the world by putting in
+			  the coordinates and pressing the "Search" button. From there, you can save your favorites to access them
+			  at any time.</p>
+			</div>
+		  </div>
+
+		<!-- END MAIN -->
+		</div>
+
+		<style>
+		.tjreesFooter {
+			postion: fixed;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+		}
+		</style>
+
+		<div class="tjreesFooter">
+			<div class="w3-container w3-theme-l2 w3-padding-32">
+			  <h4>CIS 571 - Project 1 (tjrees@umich.edu)</h4>
+			</div>
+
+			<div class="w3-container w3-theme-l1">
+			  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+			</div>
+		</div>
+	</body>
+
+<!--
 	<body>
 		<p>
 		Welcome to my web application!
@@ -28,5 +84,5 @@
 			<input type="submit" value="Get forecast weather!">
 			</form>
 		</p>
-	</body>
+	</body> -->
 </html>
