--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 		{% endblock %}
 	</head>
 	<body>
+    	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Navbar -->
 		<div class="w3-top">
 			<div class="w3-bar w3-theme w3-top w3-left-align w3-large">
@@ -36,6 +37,7 @@
 			</div>
 		</div>
 
+	<div id="error_messages"></div>
 	</body>
 
 
