--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,44 @@
 {% endblock %}
 
 {% block content %}
+<script id="login_script">
+function login() {
+
+	var inputData = {
+		username: $('#login_username_input').val(),
+		password: $('#login_password_input').val()
+	};
+
+	var errors = [];
+	$.ajax('api/login', {
+		type: 'post',
+		contentType: 'application/json',
+		data: JSON.stringify(inputData),
+		success: function(data, status){
+			var token = data['token']
+			document.getElementById("error_messages").innerHTML = '<p class="token">Login successful! Your token is: ' + token + '</p>';
+		},
+		error: function(jqXHR, exception){
+			var errors = jqXHR.responseJSON.errors;
+			var text = "";
+			for(var i = 0; i < errors.length; i++) {
+				text += '<p class="error">' + errors[i].message + '</p>';
+			}
+			document.getElementById("error_messages").innerHTML = text;
+		}
+	});
+}
+</script>
+
 <h1 class="w3-text-teal">Login</h1>
-<p>Username:</p>
-<p>Password:</p>
-<p>Not a member? <a href='/#'>Sign up!</a></p>
+<p>
+Log in using your username and password to receive an authentication token. You can use it to access the
+other features of the application.
+</p>
+<ul>
+	<li>Username: <input type="text" text="username" id="login_username_input"></li>
+	<li>Password: <input type="password" text="password" id="login_password_input"></li>
+	<li><button type="button" onclick="login()" id="login_submit">Submit</button></li>
+</ul>
+<p>Not a member? <a href="{{ url_for('signup_screen') }}">Sign up!</a></p>
 {% endblock %}
