Add delete user, fix some typos, update README

--- a/templates/login.html
+++ b/templates/login.html
@@ -45,4 +45,5 @@ other features of the application.
 	<li><button type="button" onclick="login()" id="login_submit">Submit</button></li>
 </ul>
 <p>Not a member? <a href="{{ url_for('signup_screen') }}">Sign up!</a></p>
+<p>Want to delete your account? <a href="{{ url_for('delete_screen') }}">Click here</a>.</p>
 {% endblock %}
